# kociemba

./: CMakeLists.txt
.zed/: debug.json
include/: kociemba.h
internal/: coordcube.h  cubycube.h  facecube.h
src/: coordcube.c  cubycube.c  facecube.c
tests/: test_cubycube.c
